[package]
name = "graphs"
version = "0.1.0"
authors = ["Lakret <Rakuretu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
# version 0.3 has annoying warnings about future deprecations &
# incompatible crate that is suggested.
criterion = "0.2"

[[bench]]
name = "representation"
harness = false
