[package]
name = "graphs"
version = "0.1.0"
authors = ["Lakret <Rakuretu@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.3"

[dev-dependencies]
# version 0.3 has annoying warnings about future deprecations &
# incompatible crate that is suggested.
criterion = "0.4"

[[bench]]
name = "representation"
harness = false
